fix header button cut off

--- a/src/components/ui/header.css
+++ b/src/components/ui/header.css
@@ -49,6 +49,7 @@
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
+    margin-right: 20px;
 }
 
 .button_billeterie:hover {
